[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/menu1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/menu2.png" type="Texture" id=4]
[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Logo/42png.png" type="Texture" id=6]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght(1).ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Environment/GroundTile/tile3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Environment/GroundTile/tile9.png" type="Texture" id=9]
[ext_resource path="res://Assets/Environment/GroundTile/tile11.png" type="Texture" id=10]
[ext_resource path="res://Assets/Environment/GroundTile/title12.png" type="Texture" id=11]
[ext_resource path="res://Assets/Environment/GroundTile/tile1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Environment/GroundTile/tile7.png" type="Texture" id=13]
[ext_resource path="res://Assets/PlayerAssets/TankAssets/panzerpng1.png" type="Texture" id=14]
[ext_resource path="res://Fonts/AGENCYB.TTF" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/UI/Chain1.png" type="Texture" id=16]

[sub_resource type="TileSet" id=10]
0/name = "title12.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tile11.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile9.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tile3.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tile7.png 4"
4/texture = ExtResource( 13 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tile1.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 124
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=8]
resource_name = "ProjectAni"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ProjectPanzer:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.001, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "ECTORPJ ZNERAP", "PRPANOJ ERETC", "PAZECT PROJZER", "TCEJZER PROPAN", "JECTER PROPANZ", "JECPAN PROZERT", "PROPANZ JECTER", "PROJER TANPER", "ORJCETP ANZERP", "PROJER PANTER", "ZERPAN JECTPRO", "ECTORPJ ZNERAP", "TCEJZER PROPAN", "ECTORPJ ZNERAP", "PAZECT PROJZER", "TCEJZER PROPAN", "TANZER PROPOR", "JECTOR PANZER", "PROJER PANZER", "PANZER PRJOJEC", "PNRJT PNZER", "PROJECT PANZER" ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ProjectPanzer:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "PAZECT PROJZER" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TankSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 614, 567 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SettingsButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SettingsLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OnlinButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OnlineLabel:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Logo42:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ComingSoon:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "PlayAni"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("TankSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 614, 567 ), Vector2( 614, 540 ), Vector2( 614, 510 ), Vector2( 614, 480 ), Vector2( 614, 450 ), Vector2( 614, 420 ), Vector2( 614, 390 ), Vector2( 614, 350 ), Vector2( 614, 320 ), Vector2( 614, 280 ), Vector2( 614, 240 ), Vector2( 614, 200 ), Vector2( 614, 150 ), Vector2( 614, 100 ), Vector2( 614, 50 ), Vector2( 614, 0 ), Vector2( 614, -70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SettingsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SettingsLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OnlinButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OnlineLabel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Logo42:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ProjectPanzer:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ComingSoon:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingsButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SettingsLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OnlinButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OnlineLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Logo42:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ComingSoon:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("VersionLabel:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=14]
resource_name = "LogoAni"
tracks/0/type = "value"
tracks/0/path = NodePath("Logo42:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 156, 608 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo42:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Logo42:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Logo42:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 156, 608 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo42:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.215686 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Logo42:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 870 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 1.0
margin_top = -20.0
margin_right = 1282.0
margin_bottom = 875.0
rect_rotation = 0.242504
color = Color( 0.113725, 0.635294, 0.341176, 1 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 17, 0 )
tile_set = SubResource( 10 )
format = 1
tile_data = PoolIntArray( -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 4, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 5, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 4, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 5, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 4, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 5, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 4, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 5, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 4, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 5, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 4, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 5, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 4, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 5, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 5, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 4, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 5, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 4, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 5, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 4, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 5, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 4, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 5, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 4, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 5, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 4, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 5, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 851971, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 917507, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 983043, 2, 0, 983051, 2, 0, 983052, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 1048579, 2, 0, 1048591, 2, 0, 1114115, 2, 0, 1114127, 2, 0, 1179651, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1245187, 2, 0, 1245188, 2, 0, 1245200, 2, 0, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310736, 2, 0, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376273, 2, 0, 1441795, 2, 0, 1441796, 2, 0, 1441797, 2, 0, 1441805, 2, 0, 1441809, 2, 0, 1507332, 2, 0, 1507333, 2, 0, 1507341, 2, 0, 1507345, 2, 0, 1572876, 2, 0, 1572877, 2, 0, 1572878, 2, 0, 1572881, 2, 0, 1638412, 2, 0, 1638413, 2, 0, 1638414, 2, 0, 1638415, 2, 0, 1638417, 2, 0, 1703949, 2, 0, 1703950, 2, 0, 1703951, 2, 0, 1703952, 2, 0, 1703953, 2, 0 )

[node name="PlayButton" type="TouchScreenButton" parent="."]
light_mask = 3
position = Vector2( 419, 219 )
scale = Vector2( 2.8, 1.9 )
normal = ExtResource( 2 )
pressed = ExtResource( 4 )

[node name="PlayLabel" type="Label" parent="."]
margin_left = 464.0
margin_top = 224.0
margin_right = 800.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 1 )
text = "CAMPAING"

[node name="SettingsButton" type="TouchScreenButton" parent="."]
position = Vector2( 750, 424 )
scale = Vector2( 2.8, 1.8 )
normal = ExtResource( 2 )
pressed = ExtResource( 4 )

[node name="SettingsLabel" type="Label" parent="."]
margin_left = 798.0
margin_top = 430.0
margin_right = 1093.0
margin_bottom = 508.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[node name="OnlinButton" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 95, 424 )
scale = Vector2( 2.8, 1.8 )
normal = ExtResource( 2 )
pressed = ExtResource( 4 )

[node name="Chain1" type="Sprite" parent="OnlinButton"]
position = Vector2( 26.0714, 26.6667 )
scale = Vector2( 0.357143, 0.555556 )
texture = ExtResource( 16 )

[node name="Chain2" type="Sprite" parent="OnlinButton"]
position = Vector2( 60.3571, 26.6667 )
scale = Vector2( 0.368664, 0.555556 )
texture = ExtResource( 16 )

[node name="Chain3" type="Sprite" parent="OnlinButton"]
position = Vector2( 93.5714, 26.6667 )
scale = Vector2( 0.339862, 0.555556 )
texture = ExtResource( 16 )

[node name="Chain4" type="Sprite" parent="OnlinButton"]
position = Vector2( 123.214, 26.6667 )
scale = Vector2( 0.31682, 0.555556 )
texture = ExtResource( 16 )

[node name="OnlineLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 162.0
margin_top = 430.0
margin_right = 466.0
margin_bottom = 508.0
custom_fonts/font = SubResource( 3 )
text = "ONLINE"

[node name="Logo42" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 156, 608 )
rotation = -0.618397
scale = Vector2( 8, 8 )
normal = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProjectPanzer" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 106.0
margin_top = 38.0
margin_right = 1315.0
margin_bottom = 198.0
custom_fonts/normal_font = SubResource( 4 )
text = "PAZECT PROJZER"

[node name="VersionLabel" type="Label" parent="."]
margin_left = 1026.0
margin_top = 658.0
margin_right = 1235.0
margin_bottom = 697.0
custom_fonts/font = SubResource( 7 )
text = "1.000 Version"
percent_visible = 0.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/ProjectAni = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="TankSprite" type="Sprite" parent="."]
position = Vector2( 614, 567 )
texture = ExtResource( 14 )
offset = Vector2( -4, -3 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/PlayAni = SubResource( 11 )
anims/RESET = SubResource( 16 )

[node name="ComingSoon" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 240.0
margin_top = 512.0
margin_right = 392.0
margin_bottom = 551.0
rect_rotation = -39.6
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 13 )
text = "COMING SOON"

[node name="LogoAnimation" type="AnimationPlayer" parent="."]
anims/LogoAni = SubResource( 14 )
anims/RESET = SubResource( 15 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="OnlinButton" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Logo42" to="." method="_on_Logo42_pressed"]
[connection signal="animation_finished" from="AnimationPlayer3" to="." method="_on_AnimationPlayer3_animation_finished"]
